Order css, UX corona design

--- a/CORONA-landing/index.html
+++ b/CORONA-landing/index.html
@@ -45,7 +45,7 @@
     <header class="hero">
       <div class="hero__left"></div>
       <div class="hero__right">
-        <hgroup>
+        <hgroup class="hero__info">
           <h2 class="hero__subtitle">Living is a sensory experience</h2>
           <h1 class="hero__title">THIS IS LIVING</h1>
           <h3 class="hero__description">
@@ -56,11 +56,8 @@
           </h3>
         </hgroup>
 
-        <img class="beer" src="cerveza.png" alt="" />
+        <img class="beer animate-pop-in" src="cerveza.png" alt="" />
       </div>
     </header>
-
-    <script src="js/vendor/modernizr-{{MODERNIZR_VERSION}}.min.js"></script>
-    <script src="js/app.js"></script>
   </body>
 </html>
