Order folders, refactor code

--- a/CORONA-landing/index.html
+++ b/CORONA-landing/index.html
@@ -26,7 +26,7 @@
     <nav class="navbar">
       <ul class="navbar__wrapper">
         <li class="navbar__logo">
-          <img class="logo" src="logo.png" alt="Corona Log" />
+          <img class="logo" src="./images/logo.png" alt="Corona Log" />
         </li>
         <li class="navbar__link">
           <a href="#products">Products</a>
@@ -56,7 +56,7 @@
           </h3>
         </hgroup>
 
-        <img class="beer animate-pop-in" src="cerveza.png" alt="" />
+        <img class="beer animate-pop-in" src="./images/cerveza.png" alt="" />
       </div>
     </header>
   </body>
