--- a/Interior-landing/index.html
+++ b/Interior-landing/index.html
@@ -4,11 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
+    
 </head>
 <body>
-    <div class="banner">
-        <div class="navbar">
+    <header class="banner">
+        <nav class="navbar">
             <img src="logo.png" alt="logo" class="logo">
             <ul>
                 <li><a href="#">Home</a></li>
@@ -17,8 +20,8 @@
                 <li><a href="#">Kitchen</a></li>
                 <li><a href="#">Backyard</a></li>
             </ul>
-        </div>
-        <div class="content">
+        </nav>
+        <div class="content" aria-label="main information">
             <h1>DESIGN YOUR HOUSE</h1>
             <p>Get the best house you have always dreamed! We are experts and you our favourite client.</p>
             <div>
@@ -26,6 +29,6 @@
                 <button type="button"><span></span>GITHUB</button>
             </div>
         </div>
-    </div>
+    </header>
 </body>
 </html>
