--- a/Interior-landing/index.html
+++ b/Interior-landing/index.html
@@ -12,7 +12,7 @@
 <body>
     <header class="banner">
         <nav class="navbar">
-            <img src="logo.png" alt="logo" class="logo">
+            <p class="navbar__logo">!Interior</p>
             <ul>
                 <li><a href="#">Home</a></li>
                 <li><a href="#">Bedroom</a></li>
